# qmera-wpp-and-wgppc

./: .gitignore  CMakeLists.txt  README  README.md  code-by-code  how-to-wgpp
color/: wgpp.vim
src/: .gitignore  Makefile  err.cc  functions.cc  generate.cc  lexer.cc  main.cc  main.cpp  temp.cc  token-op.cc  tokens-checker.cc  utils.cc  variables.cc
src/code/: a-exit.wgpp  b-wout.wgpp  c-at-the-same-line.wgpp  c-variables-i.wgpp  c-variables-ii.wgpp  c-variables.wgpp  d-int-variable.wgpp  d-printf.wgpp  e-chg-function.wgpp  e-copy-value-among-int-variables.wgpp  f-arithmetic.wgpp  f-int-operations.wgpp  g-chg-function.wgpp  g-pointers.wgpp  h-arithmetich.wgpp  h-printf.wgpp  i-int-operations.wgpp  j-character-variables.wgpp  k-functions.wgpp
src/include/: assembly-help.h  does-it-make-sense.h  err-report.h  err.hh  functions.h  functions.hh  generate.h  generate.hh  lexer.h  lexer.hh  temp.hh  template.h  token-op.hh  token-operations.h  token-types.hh  token.h  tokens-checker.hh  util.h  utils.hh  variables.h  variables.hh
src/sh/: final.sh  union.sh
src/test/: a.out  main.c  main.s
